<resources>
    <string name="app_name">LocationTrackerApp</string>
    <string name="location_tracker">Location Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="biometric_identification">Biometric Identification</string>
    <string name="navigation_drawer_open">Nav Drawer Open</string>
    <string name="navigation_drawer_close">Nav Drawer Close</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="log_out">Log Out</string>
    <string name="manage_requests">Manage Requests</string>
    <string name="users">Users</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>
    <string name="notification">notification</string>
</resources>